--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       MYSQL_USER: spring
       MYSQL_PASSWORD: holamundo
     volumes:
-      - mysql_db
+      - mysql_db:/var/lib/mysql
 
   login_app:
     image: login_app:1.0.0
