--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/login
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.username=${MYSQL_USER:spring}
+spring.datasource.password=${MYSQL_PASSWORD:holamundo}
+#spring.datasource.username=spring
+#spring.datasource.password=holamundo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
